fix new twitter icon being a little off center on mf on chrome and safari

--- a/wp-content/universal-assets/v2/scss/universal-footer.scss
+++ b/wp-content/universal-assets/v2/scss/universal-footer.scss
@@ -195,6 +195,8 @@
                             margin-top: auto;
                             margin-right: 8px;
                             padding-bottom: .1em;
+                            display: flex;
+                            min-height: 30px;
                             a { display: flex; }
                             .footer-x-logo {
                                 &:hover {
